# Icaryx

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md  configure.sh  cr-file-tool
scripts/git-hooks/: commit-msg
src/: BUILD.bazel  CMakeLists.txt  app.cpp  app.cxx  app.h  main.cpp  namespace.h
test/: BUILD.bazel  CMakeLists.txt  sample_test.cpp
